tls/httpbin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-apis-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: service-apis-demo
spec:
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: docker.io/kennethreitz/httpbin
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: service-apis-demo
spec:
  selector:
    app: httpbin
  ports:
  - name: http
    port: 80
    targetPort: 80
