tls/httproute.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: foo-route
  namespace: service-apis-demo
spec:
  hosts:
  - rules:
    - action:
        forwardTo:
        - targetPort: 80
          targetRef:
            name: httpbin
